# ppocr-suite

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
api/app/: main.py
api/app/api/: deps.py  ocr.py  rate_limit.py
api/app/core/: config.py  errors.py  ocr_engine.py  request_logging.py
api/app/schemas/: ocr.py
api/app/services/: ocr_service.py
api/app/utils/: file_utils.py
api/tests/: test_auth.py  test_ocr_api.py  test_ocr_engine.py  test_ocr_service.py
app/: main.py
app/api/: deps.py  ocr.py
app/core/: config.py  ocr_engine.py
app/schemas/: ocr.py
app/services/: ocr_service.py
app/utils/: file_utils.py
app/web/: app.js  index.html  styles.css
scripts/: run_dev.sh  run_prod.sh
skill/: README.md  index.html  package.json
skill/public/: openapi.json
tests/: test_auth.py  test_ocr_api.py  test_ocr_service.py
web/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  wrangler.jsonc
web/scripts/: download_models.sh
web/src/: main.tsx  styles.css
web/src/ocr/: image.ts  modelConfig.ts  postprocess.ts  recognizer.ts  session.ts  types.ts  worker.ts
