[project]
name = "ppocr-api"
version = "0.2.0"
description = "A lightweight FastAPI OCR API powered by PaddleOCR CPU."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "paddleocr>=3.0.0",
    "paddlepaddle>=3.0.0",
    "pillow>=10.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
